<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorbackgroundhijau"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo_dinas"
            android:src="@drawable/logodinas" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/txt_aktivasi_akun"
            android:textColor="@color/colorputih"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_nik"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_input"
            android:importantForAutofill="no"
            android:inputType="text"
            android:hint="@string/edt_nik"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_btn_kuning"
        android:text="@string/txt_aktivasi_ulang_akun"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_btn_putih"
        android:text="@string/txt_batal"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />


</LinearLayout>